# rest-api-sdk

./: .gitignore  .openapi-generator-ignore  .spectral.json  CODEOWNERS  LICENSE.md  README.md  ThoughtSpot.Client.sln  appveyor.yml  openapi-spec-diff.md  openapiSpecv3-2_0.json  openapiSpecv3.json  openspecapi.json  portal.v7-uber.js  regen-and-serve.sh  sonar-project.properties  test.txt
sdks/python/: .openapi-generator-ignore  README.md  pyproject.toml
sdks/python/thoughtspot_rest_api_sdk/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py  sync_helper.py  token_provider.py
sdks/python/thoughtspot_rest_api_sdk/api/: __init__.py  ai_api.py  authentication_api.py  collections_api.py  connection_configurations_api.py  connections_api.py  custom_action_api.py  custom_calendars_api.py  data_api.py  dbt_api.py  email_customization_api.py  groups_api.py  jobs_api.py  log_api.py  manual_translation_api.py  metadata_api.py  orgs_api.py  reports_api.py  roles_api.py  schedules_api.py  security_api.py  style_customization_api.py  system_api.py  tags_api.py  thought_spot_rest_api.py  users_api.py  variable_api.py  version_control_api.py  webhooks_api.py
sdks/python/thoughtspot_rest_api_sdk/models/: __init__.py  ac_state.py  access_token.py  action_config.py  action_config_input.py  action_config_input_create.py  action_details.py  action_details_input.py  action_details_input_create.py  activate_user_request.py  advanced_chart_font_assignment_input.py  advanced_chart_visualization_font_record.py  agent_conversation.py  agent_conversation_history_response.py  agent_conversation_list.py  agent_instructions.py  ai_context.py  answer_content.py  answer_data_response.py  answer_details.py  answer_png_options_input.py  answer_response_item.py  (+500 more)
(+10909 files in other folders)
